--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -51,6 +51,12 @@
     gap: 20px;
     margin-top: 70px;
   }
+}
+
+@media (min-width: $desktop-width) {
+  .pagination {
+    margin-top: 60px;
+  }
 
   .pagination__link {
     font-size: 16px;
